# postgres-s3-warehouse-sync

./: .env.dev  .env.example  .env.localaws.example  .gitignore  DEPLOY.md  Makefile  README.md  compose.prod.yml  docker-compose.dev.yml  docker-compose.localaws.yml  pyproject.toml
docker/: Caddyfile.example  Dockerfile.dagster-webserver  Dockerfile.extractor  Dockerfile.gateway  dagster.dev.yaml  dagster.yaml  workspace.yaml
docs/: AUTH.md  POWERBI.md
scripts/: seed.sql  viamedia_gateway.pq
src/viamedia_pipeline/common/: config_store.py  crypto.py  logging.py  metadata_db.py  migrations.py  pg.py  s3.py  settings.py
src/viamedia_pipeline/extract/: chunker.py  copy_worker.py  discovery.py  incremental.py  schema.py  snapshot.py
src/viamedia_pipeline/gateway/: app.py  auth.py  dagster_client.py  duckdb_pool.py  oauth.py  query.py  sql_guard.py  ui.py  view_refresher.py
src/viamedia_pipeline/load/: iceberg_writer.py  maintenance.py  merge.py  reconcile.py
src/viamedia_pipeline/orchestration/: bootstrap_job.py  definitions.py  incremental_job.py  maintenance_job.py  reconcile_job.py  resources.py  tables.py
src/viamedia_pipeline/state/: chunks.py  watermarks.py
tests/: conftest.py  test_chunker.py  test_discovery.py  test_sql_guard.py  test_watermark.py
